workspace/testCollection/src/test/nested/TestNested.java
package test.nested;

public class TestNested {
	public static void main(String[] args) {
		// 내부 정적 인터페이스 사용 테스트
		// 외부인터페이스명.내부인터페이스명 레퍼런스;
		Fmap.FEntry entry;
		
		// Nested 클래스 | 인터페이스는 단독 사용 못 함
//		Fentry ent; // error
	}
}
